# SN-ATCE-Optimizer

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.github/: merged.yml
ntc_optimization/: dataclasses_and_config.py  generate_gc_matrix_from_jao.py  optimization_functions.py  prepare_data_from_gc_matrix.py  solve_ntc_optimzation.py
