[tool.poetry]
name = "ntc-optimzation"
version = "0.1.0"
description = ""
authors = ["Robert Solli <robert.solli@statnet.no>"]
readme = "README.md"
packages = [{include = "ntc_optimization"}]

[tool.poetry.dependencies]
python =">=3.10"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
cvxpy = "^1.4.2"
cvxopt = "^1.3.2"
streamlit = "^1.32.0"
plotly = "^5.19.0"
pre-commit = "^3.6.2"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = []

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | profiling
)/
'''

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
